# Cryptonite.Yacl

./: .gitignore  .gitmodules  .travis.yml  LICENSE.md  README.md  cmake.ps1  cmake.sh
lib/: CMakeLists.txt
lib/bzip2/: CMakeLists.txt  cmake.ps1  cmake.sh
lib/xz-utils/: CMakeLists.txt
src/: CMakeLists.txt  Cryptonite.Yacl.sln  cmake.ps1
src/Cryptonite.Yaal.BZip2/: BZip2BaseStream.cs  BZip2BlockSizeStreamOption.cs  BZip2BlockSizeStreamSetting.cs  BZip2CompressStream.cs  BZip2CompressStreamOptions.cs  BZip2CompressStreamSettings.cs  BZip2DecompressStream.cs  BZip2DecompressStreamOptions.cs  BZip2DecompressStreamSettings.cs  BZip2FileStream.cs  BZip2SmallDecompressStreamOption.cs  BZip2SmallDecompressStreamSetting.cs  BZip2WorkFactorStreamOption.cs  BZip2WorkFactorStreamSetting.cs  CMakeLists.txt
src/Cryptonite.Yaal.BZip2.Managed/: CMakeLists.txt  NativeInterface.cpp  NativeInterface.h  NativeInterfaceException.cpp  NativeInterfaceException.h
src/Cryptonite.Yaal.BZip2.Native/: CMakeLists.txt
src/Cryptonite.Yaal.BZip2.Tests/: CMakeLists.txt  NativeInterfaceTests.cs  StreamTests.cs
src/Cryptonite.Yaal.Cmd/: App.cs  CMakeLists.txt
src/Cryptonite.Yaal.Common/: BaseStream.cs  BoolStreamOption.cs  BoolStreamSetting.cs  CMakeLists.txt  EnumStreamSetting.cs  IStreamOption.cs  IStreamOptions.cs  IStreamSetting.cs  IStreamSettings.cs  Int32StreamOption.cs  Int32StreamSetting.cs  RangedInteger.cs  StreamOption.cs  StreamOptions.cs  StreamSetting.cs  StreamSettings.cs  StreamUtilities.cs
src/Cryptonite.Yaal.GZip/: CMakeLists.txt  GZipBaseStream.cs  GZipCompressStream.cs  GZipCompressStreamSettings.cs  GZipCompressionLevelStreamSetting.cs  GZipDecompressStream.cs  GZipDecompressStreamSettings.cs
src/Cryptonite.Yaal.Tests.BZip2/: CMakeLists.txt  NativeInterfaceTests.cs  StreamTests.cs
src/Cryptonite.Yaal.Tests.Common/: CMakeLists.txt  TestResources.cs
src/Cryptonite.Yaal.XZ.Native/: CMakeLists.txt
src/Cryptonite.Yacl.BZip2/: BZip2BaseStream.cs  BZip2BlockSizeSetting.cs  BZip2CompressSettings.cs  BZip2CompressStream.cs  BZip2DecompressSettings.cs  BZip2DecompressStream.cs  BZip2NativeInterface.cs  BZip2SmallDecompressSetting.cs  BZip2Stream.cs  BZip2WorkFactorSetting.cs  CMakeLists.txt  Cryptonite.Yacl.BZip2.csproj
src/Cryptonite.Yacl.BZip2.Managed/: CMakeLists.txt  NativeInterface.cpp  NativeInterface.h  NativeInterfaceException.cpp  NativeInterfaceException.h
src/Cryptonite.Yacl.BZip2.Native/: CMakeLists.txt
src/Cryptonite.Yacl.Cmd/: App.cs  CMakeLists.txt  Cryptonite.Yacl.Cmd.csproj
src/Cryptonite.Yacl.Common/: BaseStream.cs  BoolSetting.cs  CMakeLists.txt  Cryptonite.Yacl.Common.csproj  EnumSetting.cs  ISetting.cs  ISettings.cs  Int32Setting.cs  Setting.cs  Settings.cs  StreamUtilities.cs  UInt32Setting.cs
src/Cryptonite.Yacl.GZip/: CMakeLists.txt  Cryptonite.Yacl.GZip.csproj  GZipBaseStream.cs  GZipCompressSettings.cs  GZipCompressStream.cs  GZipCompressionLevelSetting.cs  GZipDecompressSettings.cs  GZipDecompressStream.cs  GZipStream.cs
src/Cryptonite.Yacl.Tests.BZip2/: BZip2StreamTests.cs  CMakeLists.txt  Cryptonite.Yacl.Tests.BZip2.csproj  NativeInterfaceTests.cs  StreamTests.cs
src/Cryptonite.Yacl.Tests.Common/: BaseStreamTests.cs  CMakeLists.txt  Cryptonite.Yacl.Tests.Common.csproj  TestResources.cs
src/Cryptonite.Yacl.Tests.GZip/: CMakeLists.txt  Cryptonite.Yacl.Tests.GZip.csproj  GZipStreamTests.cs
src/Cryptonite.Yacl.Tests.XZ/: CMakeLists.txt  Cryptonite.Yacl.Tests.XZ.csproj  LZMAStreamTests.cs
src/Cryptonite.Yacl.XZ/: CMakeLists.txt  Cryptonite.Yacl.XZ.csproj  LZMABaseStream.cs  LZMACompressSettings.cs  LZMACompressStream.cs  LZMACompressionPresetSetting.cs  LZMADecompressSettings.cs  LZMAExtremeCompressionSetting.cs  LZMAStream.cs
src/Cryptonite.Yacl.XZ.Managed/: CMakeLists.txt  NativeInterface.cpp  NativeInterface.h  NativeInterfaceException.cpp  NativeInterfaceException.h
src/Cryptonite.Yacl.XZ.Native/: CMakeLists.txt
